--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@
 /* Roboto Font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@600&display=swap');
+
+
 @supports (scrollbar-color: red blue) {
     * {
         scrollbar-width: thin;
@@ -81,7 +84,7 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 h1,
@@ -90,7 +93,8 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'jura', serif;
+    font-weight: bold;
 
 }
 
