--- a/css/style.css
+++ b/css/style.css
@@ -205,13 +205,14 @@ header {
 
 .fa-whatsapp {
     color: #000000;
-    text-shadow: 0 0 .15em hsla(0, 0%, 0%, 1),
-        0 0 .05em hsla(0, 0%, 0%, 0.84);
+    text-shadow: 0px 0px 0px #000;
+    /* text-shadow: 0 0 .15em hsla(0, 0%, 0%, 1); */
+    /* 0 0 .01em hsla(0, 0%, 0%, 0.84); */
 }
 
 .fa-envelope {
     color: #000000;
-    text-shadow: 0 0 .12em hsla(0, 0%, 0%, 0.755);
+    /* text-shadow: 0 0 .05em hsla(0, 0%, 0%, 0.755); */
 }
 
 .icons-hover {
